# family-chatbot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Enable Family Chat Auto Start.cmd  Makefile  Open Family Chat.cmd  README.md  Setup Family Chat.cmd  pyproject.toml
.github/workflows/: tests.yml
family_chat/: __init__.py  config.py  env_loader.py  memory.py  model_catalog.py  ollama_client.py  policy.py  server.py  service.py
scripts/windows/: FamilyChat.Common.ps1  install-startup.ps1  setup-family-chat.ps1  start-family-chat.ps1
static/: index.html
tests/: test_config.py  test_memory.py  test_ollama_client.py  test_policy.py  test_server.py  test_service.py
