[project]
name = "family-chat-mvp"
version = "0.1.0"
description = "Experimental local-first family chat setup exploring safer chat patterns."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.6.11",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pycryptodome>=3.23.0",
]
